test/2-errors/trace-tco.test
{
  'code' : 1,
  'err' : '''\
lookup error: `unbound
trace:
  `unbound
  … 21
  test/2-errors/trace-tco.ploy:9:1:
    (f 5)
    ~~~~~
'''
}
